<resources>
    <string name="app_name">GoStay!</string>
    <string name="title_activity_registrarse">activity_registrarse</string>
    <string name="default_web_client_id">AIzaSyDlsAfeacUYjZRTkeFWoZ8_dxJEoUKy_zM</string>
    <string name="option_1">Editar</string>
    <string name="option_2">Eliminar</string>
    <string name="bienvenida">Encuentra y explora tu próximo destino</string>
    <string name="textbienvenida">¡Tu mejor opción para encontrar un hotel que se ajuste a tu preferencia!</string>
    <string name="btnContinuar">Continuar</string>
    <string name="confirmatucuenta">Confirma tu cuenta</string>
    <string name="ingresaelcodigo">Ingresa el código</string>
    <string name="indicacion">Enviamos un código por gmail. Ingrésalo para confirmar tu cuenta.</string>
    <string name="reenviarcod">¿No recibiste el código?</string>
    <string name="indicacionsm">Enviamos un código por mensajes. Ingrésalo para confirmar tu cuenta.</string>
    <string name="direccion">Colonia Libertad, Avenida Morazán, Pasaje Morelos #111 San Salvador, El Salvador.</string>
    <string name="confircorreo">Enviamos un código por gmail. Ingrésalo para confirmar tu cuenta.</string>
    <string name="newcontra">Crea una nueva contraseña</string>
    <string name="txtnewcontra">Crea una contraseña que contenga al menos 12 dígitos. Debes incluir caracteres especiales, mayúsculas y minúsculas.</string>
    <string name="denuncias">Denuncias</string>
    <string name="editarperfil">Editar perfil</string>
    <string name="fotoperfil">Foto de perfil</string>
    <string name="correoelectro">Correo electrónico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Guardar">Guardar</string>
    <string name="eleccion">Mira la variedad de habitaciones que te ofrecemos</string>
    <string name="favoritos">Favoritos</string>
    <string name="txt1favoritos">Guarda lo que te gusta para luego</string>
    <string name="txt2favoritos">Crea tu lista para comparar y reservas fácilmente  tus alojamientos favoritos.</string>
    <string name="buscar">Empieza a buscar</string>
    <string name="habitaeco">Habitación económica</string>
    <string name="servishabi">Lo que esta habitacion ofrece</string>
    <string name="Reservar">Reservar</string>
    <string name="Historial">Historial de reservas</string>
    <string name="Hoteldeta">Hotel Detalles</string>
    <string name="servihotel">Servicios de Hotel</string>
    <string name="opinion">Opina sobre nuestro hotel</string>
    <string name="btnReporta">Reporta este anuncio</string>
    <string name="eligehabi">Elige tu habitación</string>
    <string name="olvidastecontra">¿Olvidaste tu contraseña?</string>
    <string name="o">o</string>
    <string name="Iniciar">Iniciar</string>
    <string name="hotelesdispo">Hoteles disponibles</string>
    <string name="buscahotel">Busca un hotel</string>
    <string name="txtmetodos">Escoge un método para recuperar tu contraseña</string>
    <string name="Númerocel">Número de celular</string>
    <string name="ofertastxt1">Ahorra un 15% o más</string>
    <string name="ofertastxt2">Disfruta de los mejores precios</string>
    <string name="busquedad1">Cerca de mi ubicación actual</string>
    <string name="busquedad2">Agrega tu próximo destino</string>
    <string name="txtInicio">Descubre tu próximo destino</string>
    <string name="busqueinicio">¿A dónde quieres ir?</string>
    <string name="perfil">Perfil</string>
    <string name="Tuscomentarios">Tus comentarios</string>
    <string name="ofertas">Ofertas</string>
    <string name="historese">Historial de reservas</string>
    <string name="politicas">Política de privacidad</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="poligo">Políticas de GoStay</string>
    <string name="introduccion">Introducción</string>
    <string name="txt1">GoStay se compromete a facilitar a los turistas extranjeros una experiencia de reserva de hospedaje en El Salvador que sea intuitiva, eficiente y satisfactoria. Nuestro objetivo es abordar los principales desafíos que enfrentan los visitantes al buscar alojamiento en el país, optimizando el proceso mediante el uso de tecnología innovadora.</string>
    <string name="txt2">Ubicación: Proximidad a atracciones turísticas y accesibilidad.</string>
    <string name="txt3">Calidad y Comodidades: Estándares de confort, servicios ofrecidos y instalaciones.</string>
    <string name="txt4">Seguridad: Garantizar entornos seguros y confiables.</string>
    <string name="txt5">Opiniones y Recomendaciones: Reseñas de otros usuarios y reputación del establecimiento.</string>
    <string name="compromiso">Compromiso de GoStay</string>
    <string name="txt6">Verificación de Calidad: Revisar y verificar la calidad de los hoteles listados en nuestra plataforma.</string>
    <string name="txt7">Transparencia: Proporcionar información detallada y precisa sobre cada opción de hospedaje.</string>
    <string name="txt8">Soporte al Cliente: Ofrecer soporte continuo para garantizar una experiencia positiva desde la reserva hasta la estadía.</string>
    <string name="txt10">GoStay se compromete a mejorar continuamente la experiencia de reserva de hospedaje en El Salvador, utilizando tecnología avanzada para satisfacer las necesidades y expectativas de los turistas internacionales. Nuestras políticas están diseñadas para asegurar transparencia, eficiencia y comodidad en cada etapa del proceso de reserva.</string>
    <string name="pregunta">¿Por qué quieres reportarlo?</string>
    <string name="noexiste">El hotel no existe</string>
    <string name="noesreal">La información no es real</string>
    <string name="ofensivo">Es ofensivo</string>
    <string name="duplicado">El anuncio está duplicado</string>
    <string name="falso">El anuncio no es sobre un hotel</string>
    <string name="reportarbtn">Reportar</string>
    <string name="recupe">Recupera tu cuenta</string>
    <string name="ingreco">Ingresa tu correo electrónico</string>
    <string name="txtrecu">Podemos enviarte notificaciones a tu email con fines de seguridad e inicio de sesión.</string>
    <string name="numrecu">Ingresa tu número de teléfono</string>
    <string name="txtnum">Podemos enviarte notificaciones a tu número de teléfono con fines de seguridad e inicio de sesión.</string>
    <string name="regis">Regístrate</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Fecha">Fecha de nacimiento</string>
    <string name="conficontra">Confirmar Contraseña</string>
    <string name="Registrarse">Registrarse</string>
    <string name="cuentaexis">¿Ya tienes una cuenta?</string>
    <string name="inia">Inicia sesión</string>
    <string name="info">Necesitamos la siguiente información</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Departamento">Departamento</string>
    <string name="entrasa">Entrada y Salida</string>
    <string name="nombreti">Nombre titular tarjeta</string>
    <string name="numtar">Número de tarjeta</string>
    <string name="fechaca">Fecha de caducidad</string>
    <string name="mmaa">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Reservaciones">Reservaciones</string>t
    <string name="todasdenuncias">Todas las denuncias</string>
    <string name="Filtros">Filtros</string>
    <string name="rango">Rango de precios</string>
    <string name="txtf">Precio por noche sin incluir impuestos</string>
    <string name="servicioshotel">Servicios de Hotel</string>
    <string name="capacidad">Capacidad de personas</string>
    <string name="Aplicar">Aplicar</string>
    <string name="preguntadialog">¿Estás seguro de realizar tu reserva?</string>
    <string name="mensajedialog">No se podrá cancelar ni reembolsar la reserva una vez realizada</string>
    <string name="Sí">Sí</string>
    <string name="No">No</string>
    <string name="pregunta2">¿Estas seguro de cerrar tu sesión?</string>
    <string name="comentario">¿Estas seguro de tu comentario?</string>
    <string name="comentario2">¡Gracias por tu comentario!</string>
    <string name="comentario3">¿Quieres calificar otros servicios?</string>
    <string name="valgeneral">Valoración general</string>
    <string name="otros">Otros</string>
    <string name="limpieza">limpieza</string>
    <string name="ubicacion">Ubicación</string>
    <string name="Personal">Personal</string>
    <string name="Instalaciones">Instalaciones</string>
    <string name="denunciaexitosa">Denuncia agregada correctamente</string>
    <string name="Cerrar">Cerrar</string>
    <string name="reservaexitosa">Reserva realizada con éxito</string>
    <string name="txtreservas1">Aún no tienes         reservas</string>
    <string name="mensajereservas">Haz realidad tu próxima aventura con todas tus reservas en un solo lugar.</string>
    <string name="Configuraciones">Ajustes</string>
    <string name="Idioma">Idioma</string>
    <string name="Indi">Se te redigirá a los ajustes de tu dispositivo</string>
    <string name="soporteapar">Contáctanos</string>
    <string name="mensajecontac">Envíanos tus dudas o sugerencias acerca de nuestra aplicación</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Titulo">Titulo</string>
    <string name="msj">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string-array name="rangeSlider">
        <item>0</item>
        <item>0</item>
    </string-array>
    <string name="iniciosesion">Inicia Sesión</string>
    <string name="aspectos">Aspectos Clave para los Turistas al Seleccionar un Hotel</string>
    <string name="conclu">Conclusión</string>
    <string name="vermas">Más detalles</string>
    <string name="valorahotel">Califica nuestro hotel</string>
    <string name="valoraservicios">Califica nuestros servicios</string>
    <string name="graciasServ">¡Gracias por calificar nuestros servicios!</string>


</resources>