<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/dialog_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="1dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="365dp"
        android:layout_height="195dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/hechoreserva">

    </com.airbnb.lottie.LottieAnimationView>

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:text="@string/comentario2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/ccv"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:text="@string/comentario3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnNoQuiero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/tuquesa"
            android:fontFamily="@font/poppinsemibold"
            android:text="@string/No"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.733"
            app:layout_constraintStart_toEndOf="@+id/btnSiQuiero"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <Button
            android:id="@+id/btnSiQuiero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/tuquesa"
            android:fontFamily="@font/poppinsemibold"
            android:text="@string/Sí"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
