<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity_habitacion_economica">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- LinearLayout para alinear los elementos de forma vertical -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgVolver"
                android:layout_width="31dp"
                android:layout_height="36dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/baseline_arrow_back_ios_new_24" />

            <TextView
                android:id="@+id/tvNombreTipoHabitacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="@string/habitaeco"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Imagen más grande -->
            <ImageView
                android:id="@+id/imgTipoHabitacion"
                android:layout_width="match_parent"
                android:layout_height="300dp"
            android:layout_marginTop="18dp"
            tools:srcCompat="@tools:sample/avatars" />

            <!-- Centrar el textView22 -->
            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:text="@string/servishabi"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

            <View
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="1dp"
                android:background="#BDBDBD" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvEspecificaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#49A8B5" />

            <Button
                android:id="@+id/btnReservar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="#49A8B5"
                android:fontFamily="@font/poppinsemibold"
                android:text="@string/Reservar"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
